--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ثبت نام</title>
+    <title>ورود</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/all.min.css">
 </head>
@@ -16,18 +16,11 @@
             <div class="row">
                 <div class="register-page">
                     <div class="register">
-                        <h1>ثبت نام کنید</h1>
-                        <ul>
-                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="#"><i class="fab fa-google"></i></a></li>
-                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                        </ul>
-                        <h5>یا می توانید از روش زیر ثبت نام کنید.</h5>
+                        <h1>وارد شوید</h1>
+                        
+                        <h5>اگر قبلا ثبت نام کرده اید وارد شوید.</h5>
                         <form>
-                            <div class="form-item">
-                                <i class="fas fa-user"></i>
-                                <input type="text" placeholder="نام و نام خانوادگی">
-                            </div>
+                            
                             <div class="form-item">
                                 <i class="fas fa-envelope"></i>
                                 <input type="text" placeholder="ایمیل">
@@ -36,15 +29,15 @@
                                 <i class="fas fa-lock"></i>
                                 <input type="password" placeholder="رمز">
                             </div>
-                            <input type="submit" value="ثبت نام">
+                            <input type="submit" value="ورود">
                         </form>
                     </div>
                     <div class="auth-login">
                         <img src="./images/logo.svg" alt="">
                         <div class="login-content">
                             <h1>خوش آمدید</h1>
-                            <p>اگر قبلا ثبت نام کرده اید می توانید از این قسمت وارد شوید.</p>
-                            <a href="login.html">وارد شوید</a>
+                            <p>اگر تا به حال ثبت نام نکرده اید می توانید از این قسمت ثبت نام کنید.</p>
+                            <a href="index.html">ثبت نام کنید</a>
                         </div>
                     </div>
                 </div>
